--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1>hello</h1>
-    
+    <p>Start a project</p>
+
 </body>
 </html>
