--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-<body class="w-screen h-screen px-20">
+<body class="w-screen h-screen">
+  <div class="w-[1440px] px-20 py-6">
    <header class="px-20 py-6">
     <div class="container flex items-center justify-between">
 <img src="./assets/breakio.svg" alt="">
@@ -28,7 +29,7 @@
         <a class="block inline no-underline" href="#">Log In</a>
     </li>
     <li>
-      <button class="bg-fuchsia-600 text-white rounded-2xl border-2 border-fuchsia-600 px-4 py-1 text-sm hover:scale-105">Start now</button>
+      <button class="w-[132px] h-12 bg-fuchsia-600 text-white rounded-[18px] border-2 border-fuchsia-600 px-4 py-1 text-base hover:scale-105">Start now</button>
     </li>
 </ul>
     </div>
@@ -39,10 +40,10 @@
     <h6 class="text-center text-[#475569] text-xl">Build your meditation skills with an app that gives you all you need!</h6>
    <div class="flex flex-row justify-center gap-x-4">
     <input class="border border-slate-300 rounded-3xl px-6 py-1 placeholder:text-black placeholder:font-extralight" type="text" placeholder="Enter your name" >
-    <button class="bg-fuchsia-600 text-white rounded-3xl  border-2 border-fuchsia-600 px-6 py-2 text-lg hover:scale-105">Start now</button>
+    <button class="w-[208px] h-[64px] bg-fuchsia-600 text-white rounded-[26px]  border-2 border-fuchsia-600 px-6 py-2 text-2xl hover:scale-105">Start now</button>
    </div>
 <div class="flex justify-center ">
-    <img class="w-max h-[465px] rounded-3xl shadow-lg" src="./assets/Picture.png" alt="">
+    <img class=" max h-[465px] rounded-3xl shadow-lg" src="./assets/Picture.png" alt="">
 </div>
 </div>
 </div>
@@ -52,7 +53,7 @@
      <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Get better everyday</h1>
      <h6 class="text-center text-[#475569] text-xl">Et pulvinar nec interdum integer id urna molestie porta nullam. A, donec ornare sed turpis pulvinar <br> purus maecenas quam a. Erat porttitor pharetra sed in mauris elementum sollicitudin.</h6>
      <div class="flex flex-row justify-center gap-x-4">
-      <button class="bg-fuchsia-600 text-white rounded-3xl  border-2 border-fuchsia-600 px-6 py-2 text-lg hover:scale-105">Start now</button>
+      <button class=" w-[208px] h-[64px] bg-fuchsia-600 text-white rounded-[26px] border-2 border-fuchsia-600 px-6 py-2 text-2xl hover:scale-105">Start now</button>
     </div>
     </div>
     <div>
@@ -163,14 +164,14 @@
     
    
     
-<div class="bg-fuchsia-50 my-20 h-[766px] absolute">
+<div class="bg-fuchsia-50 my-20 h-[766px] relative">
 
         <h1 class="py-20 h-[62px] font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">What other users say</h1>
-       <div class="mx-44 my-20 flex flex-row gap-12">
+       <div class="items-center justify-center mx-44 my-20 flex flex-row gap-12 ">
        <button><svg class="w-6 h-6  rounded border-0 border-white bg-white hover:w-7 h-7 rounded-[50px] border-2 border-inherit bg-slate-300" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
         <path d="M10.757 11.9999L15.707 16.9499C15.8025 17.0422 15.8787 17.1525 15.9311 17.2745C15.9835 17.3965 16.0111 17.5278 16.0122 17.6605C16.0134 17.7933 15.9881 17.925 15.9378 18.0479C15.8875 18.1708 15.8133 18.2824 15.7194 18.3763C15.6255 18.4702 15.5138 18.5445 15.3909 18.5948C15.268 18.645 15.1364 18.6703 15.0036 18.6692C14.8708 18.668 14.7396 18.6404 14.6176 18.588C14.4956 18.5356 14.3852 18.4594 14.293 18.3639L8.63599 12.7069C8.44852 12.5194 8.3432 12.2651 8.3432 11.9999C8.3432 11.7348 8.44852 11.4805 8.63599 11.2929L14.293 5.63594C14.4816 5.45378 14.7342 5.35298 14.9964 5.35526C15.2586 5.35754 15.5094 5.46271 15.6948 5.64812C15.8802 5.83353 15.9854 6.08434 15.9877 6.34654C15.9899 6.60873 15.8891 6.86133 15.707 7.04994L10.757 11.9999Z" fill="#475569"/>
       </svg></button>
-    <div class="px-12 py-12  w-[756px] h-[464px] bg-white flex flex-col items-center gap-y-8">
+    <div class=" py-12  w-[756px] h-[464px] bg-white flex flex-col items-center gap-y-8">
 <h5 class="text-3xl">Placerat feugiat senectus</h5>
 <p>Ultricies pharetra arcu turpis dui massa interdum lorem. <br> Viverra nunc quisque congue tincidunt potenti. Tellus, enim <br> vel habitasse commodo ultrices aenean ultricies.</p>
    <div class=" gap-y-4 w-[660px] h-[179px] flex flex-col items-center gap-y-4">
@@ -185,21 +186,21 @@
     <path d="M13.314 12.071L8.36399 7.12098C8.18184 6.93238 8.08104 6.67978 8.08332 6.41758C8.0856 6.15538 8.19077 5.90457 8.37618 5.71916C8.56158 5.53375 8.8124 5.42859 9.07459 5.42631C9.33679 5.42403 9.58939 5.52482 9.77799 5.70698L15.435 11.364C15.6225 11.5515 15.7278 11.8058 15.7278 12.071C15.7278 12.3361 15.6225 12.5905 15.435 12.778L9.77799 18.435C9.58939 18.6171 9.33679 18.7179 9.07459 18.7157C8.8124 18.7134 8.56158 18.6082 8.37618 18.4228C8.19077 18.2374 8.0856 17.9866 8.08332 17.7244C8.08104 17.4622 8.18184 17.2096 8.36399 17.021L13.314 12.071Z" fill="#475569"/>
   </svg></button>
 </div>
-<svg class="relative bottom-[209px]" xmlns="http://www.w3.org/2000/svg" width="206" height="191" viewBox="0 0 206 191" fill="none">
+<svg class="absolute bottom-1" xmlns="http://www.w3.org/2000/svg" width="206" height="191" viewBox="0 0 206 191" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M-37.6708 57.3699C-1.44421 84.8107 5.0168 9.06708 41.3375 28.7148C143.128 83.7786 119.667 -22.2146 176.287 11.2689C264.696 63.5516 128.299 275.619 96.3724 284.174C66.5514 292.164 45.1998 286.034 16.6254 260.006C-11.9489 233.979 -32.2265 215.874 -60.191 207.887C-87.7407 200.019 -124.71 184.863 -140.46 126.082C-146.077 105.119 -159.202 18.2001 -132.933 2.42903C-112.067 -10.0984 -60.7864 39.8604 -37.6708 57.3699Z" fill="#FAE8FF"/>
   </svg>
-  <svg class="relative bottom-[373px]" xmlns="http://www.w3.org/2000/svg" width="222" height="164" viewBox="0 0 222 164" fill="none">
+  <svg class="absolute bottom-1" xmlns="http://www.w3.org/2000/svg" width="222" height="164" viewBox="0 0 222 164" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M-22.6708 57.4409C13.5558 84.8817 20.0168 9.13813 56.3375 28.7858C158.128 83.8496 134.667 -22.1436 191.287 11.3399C279.696 63.6227 143.299 275.69 111.372 284.245C81.5514 292.235 60.1998 286.105 31.6254 260.077C3.05111 234.05 -17.2265 215.945 -45.191 207.958C-72.7407 200.09 -109.71 184.934 -125.46 126.153C-131.077 105.19 -144.202 18.2711 -117.933 2.50007C-97.0671 -10.0273 -45.7864 39.9314 -22.6708 57.4409Z" stroke="#C026D3"/>
   </svg>
-<svg class="relative bottom-[1139px] left-[1080px]" xmlns="http://www.w3.org/2000/svg" width="169" height="250" viewBox="0 0 169 250" fill="none">
+<svg class="absolute bottom-[515px] left-[1110px]" xmlns="http://www.w3.org/2000/svg" width="169" height="250" viewBox="0 0 169 250" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M215.648 162.906C246.156 132.405 287.696 77.1187 296.502 49.5028C309.911 7.45042 292.609 -19.9207 256.769 -40.0354C189.52 -77.7777 81.5672 -45.0721 43.4923 -6.99729C7.92891 28.5662 -2.40732 54.5348 6.50862 90.0478C15.4245 125.561 21.2853 150.747 7.6938 184.756C-5.69605 218.261 1.039 237.764 21.3605 244.844C43.3396 252.501 73.6694 251.186 110.021 235.983C147.108 220.473 185.147 193.399 215.648 162.906Z" fill="#FAE8FF"/>
   </svg>
-  <svg class="relative bottom-[1389px] left-[1080px]" xmlns="http://www.w3.org/2000/svg" width="169" height="207" viewBox="0 0 169 207" fill="none">
+  <svg class="absolute bottom-[559px] left-[1110px]" xmlns="http://www.w3.org/2000/svg" width="169" height="207" viewBox="0 0 169 207" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M215.648 119.906C246.156 89.4046 287.696 34.1187 296.502 6.50277C309.911 -35.5496 292.609 -62.9207 256.769 -83.0353C189.52 -120.778 81.567 -88.0721 43.4922 -49.9973C7.9288 -14.4338 -2.40744 11.5348 6.50849 47.0478C15.4244 82.5608 21.2852 107.747 7.69369 141.756C-5.69617 175.261 1.03888 194.764 21.3604 201.844C43.3395 209.501 73.6693 208.186 110.021 192.983C147.108 177.473 185.147 150.399 215.648 119.906Z" stroke="#C026D3"/>
   </svg>
 </div>
 
-<div class=" my-[920px] mx-20">
+<div class=" mx-20">
     <div class="space-y-6 px-20">
         <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Your favourite tools</h1>
         <h6 class="text-center text-[#475569] text-xl">In risus nec molestie at in pulvinar tellus. At integer id condimentum gravida nisi nisl. Sem vitae <br>porttitor arcu congue sem erat et sit faucibus. Sollicitudin elit gravida tellus mattis porttitor.</h6>
@@ -373,7 +374,7 @@
 </div>
 
 
-<div class="my-[-800px] bg-[#F1F5F9] h-[934px]">
+<div class="bg-[#F1F5F9] h-[934px]">
     <div class="space-y-6 px-20 py-20">
         <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Frequently asked questions</h1>
         <h6 class="text-center text-[#475569] text-xl">Et pulvinar nec interdum integer id urna molestie porta nullam. A, donec ornare sed turpis pulvinar <br>purus maecenas quam a. Erat porttitor pharetra sed in mauris elementum sollicitudin.</h6>
@@ -414,7 +415,7 @@
     </div>
 </div>
 
-<div class="h-[313px] my-[800px] px-20 py-12 border-solid border-b-2 border-b-gray-200 grid grid-cols-6 gap-4 text-base space-x-12">
+<div class=" h-[313px] py-12 px-20 border-b-2 border-b-gray-200 grid grid-cols-6 gap-4 text-base space-x-12">
 <div class="space-y-2 flex flex-col">
 <a class="font-bold" href="#">Categories</a>
 <a href="#">User Interface</a>
@@ -477,7 +478,7 @@
 </div>
 
 
-<div class="my-[-776px] flex flex-row px-20">
+<div class=" flex flex-row px-20 py-12">
   <img src="./assets/Zoomerr.svg" alt="">
   <p class="w-[550px] text-sm text-gray-600 pl-1">@ 2023 - All rights reserved</p>
   <div class="w-[550px] flex flex-row justify-end space-x-4">
@@ -499,6 +500,7 @@
       <path d="M21.959 13.7189V21.0979H17.681V14.2129C17.681 12.4829 17.062 11.3029 15.514 11.3029C14.332 11.3029 13.628 12.0989 13.319 12.8679C13.206 13.1429 13.177 13.5259 13.177 13.9109V21.0979H8.897C8.897 21.0979 8.955 9.43788 8.897 8.22888H13.177V10.0529L13.149 10.0949H13.177V10.0529C13.745 9.17788 14.76 7.92688 17.033 7.92688C19.848 7.92688 21.959 9.76688 21.959 13.7189ZM4.421 2.02588C2.958 2.02588 2 2.98588 2 4.24888C2 5.48388 2.93 6.47288 4.365 6.47288H4.393C5.886 6.47288 6.813 5.48388 6.813 4.24888C6.787 2.98588 5.887 2.02588 4.422 2.02588H4.421ZM2.254 21.0979H6.532V8.22888H2.254V21.0979Z" fill="#475569"/>
     </svg></button>
   </div>
+</div>
 </div>
 </body>
 </html>
