--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="w-screen h-screen">
-  <div class="w-[1440px] px-20 py-6">
+  <div class="w-[1440px] mx-auto py-6">
    <header class="px-20 py-6">
     <div class="container flex items-center justify-between">
 <img src="./assets/breakio.svg" alt="">
@@ -48,7 +48,7 @@
 </div>
 </div>
 
-<div class="h-[1316px] py-20">
+<div class="h-[1316px] py-20 px-20">
     <div class="space-y-6 py-20">
      <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Get better everyday</h1>
      <h6 class="text-center text-[#475569] text-xl">Et pulvinar nec interdum integer id urna molestie porta nullam. A, donec ornare sed turpis pulvinar <br> purus maecenas quam a. Erat porttitor pharetra sed in mauris elementum sollicitudin.</h6>
@@ -96,7 +96,7 @@
     <h6 class="text-center text-[#475569] text-xl">Et pulvinar nec interdum integer id urna molestie porta nullam. A, donec ornare sed turpis pulvinar <br>purus maecenas quam a. Erat porttitor pharetra sed in mauris elementum sollicitudin.</h6>
 </div>
 
-<div class="flex flex-row gap-x-4 px-20 ">
+<div class="flex flex-row gap-x-4 justify-center">
    <button><svg class="w-6 h-6  rounded border-0 border-white bg-white hover:w-7 h-7 rounded-[50px] border-2 border-inherit bg-slate-300" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
     <path d="M10.757 11.9999L15.707 16.9499C15.8025 17.0422 15.8787 17.1525 15.9311 17.2745C15.9835 17.3965 16.0111 17.5278 16.0122 17.6605C16.0134 17.7933 15.9881 17.925 15.9378 18.0479C15.8875 18.1708 15.8133 18.2824 15.7194 18.3763C15.6255 18.4702 15.5138 18.5445 15.3909 18.5948C15.268 18.645 15.1364 18.6703 15.0036 18.6692C14.8708 18.668 14.7396 18.6404 14.6176 18.588C14.4956 18.5356 14.3852 18.4594 14.293 18.3639L8.63599 12.7069C8.44852 12.5194 8.3432 12.2651 8.3432 11.9999C8.3432 11.7348 8.44852 11.4805 8.63599 11.2929L14.293 5.63594C14.4816 5.45378 14.7342 5.35298 14.9964 5.35526C15.2586 5.35754 15.5094 5.46271 15.6948 5.64812C15.8802 5.83353 15.9854 6.08434 15.9877 6.34654C15.9899 6.60873 15.8891 6.86133 15.707 7.04994L10.757 11.9999Z" fill="#475569"/>
   </svg></button>
@@ -192,16 +192,16 @@
   <svg class="absolute bottom-1" xmlns="http://www.w3.org/2000/svg" width="222" height="164" viewBox="0 0 222 164" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M-22.6708 57.4409C13.5558 84.8817 20.0168 9.13813 56.3375 28.7858C158.128 83.8496 134.667 -22.1436 191.287 11.3399C279.696 63.6227 143.299 275.69 111.372 284.245C81.5514 292.235 60.1998 286.105 31.6254 260.077C3.05111 234.05 -17.2265 215.945 -45.191 207.958C-72.7407 200.09 -109.71 184.934 -125.46 126.153C-131.077 105.19 -144.202 18.2711 -117.933 2.50007C-97.0671 -10.0273 -45.7864 39.9314 -22.6708 57.4409Z" stroke="#C026D3"/>
   </svg>
-<svg class="absolute bottom-[515px] left-[1110px]" xmlns="http://www.w3.org/2000/svg" width="169" height="250" viewBox="0 0 169 250" fill="none">
+<svg class="absolute bottom-[515px] left-[1270px]" xmlns="http://www.w3.org/2000/svg" width="169" height="250" viewBox="0 0 169 250" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M215.648 162.906C246.156 132.405 287.696 77.1187 296.502 49.5028C309.911 7.45042 292.609 -19.9207 256.769 -40.0354C189.52 -77.7777 81.5672 -45.0721 43.4923 -6.99729C7.92891 28.5662 -2.40732 54.5348 6.50862 90.0478C15.4245 125.561 21.2853 150.747 7.6938 184.756C-5.69605 218.261 1.039 237.764 21.3605 244.844C43.3396 252.501 73.6694 251.186 110.021 235.983C147.108 220.473 185.147 193.399 215.648 162.906Z" fill="#FAE8FF"/>
   </svg>
-  <svg class="absolute bottom-[559px] left-[1110px]" xmlns="http://www.w3.org/2000/svg" width="169" height="207" viewBox="0 0 169 207" fill="none">
+  <svg class="absolute bottom-[559px] left-[1270px]" xmlns="http://www.w3.org/2000/svg" width="169" height="207" viewBox="0 0 169 207" fill="none">
     <path fill-rule="evenodd" clip-rule="evenodd" d="M215.648 119.906C246.156 89.4046 287.696 34.1187 296.502 6.50277C309.911 -35.5496 292.609 -62.9207 256.769 -83.0353C189.52 -120.778 81.567 -88.0721 43.4922 -49.9973C7.9288 -14.4338 -2.40744 11.5348 6.50849 47.0478C15.4244 82.5608 21.2852 107.747 7.69369 141.756C-5.69617 175.261 1.03888 194.764 21.3604 201.844C43.3395 209.501 73.6693 208.186 110.021 192.983C147.108 177.473 185.147 150.399 215.648 119.906Z" stroke="#C026D3"/>
   </svg>
 </div>
 
-<div class=" mx-20">
-    <div class="space-y-6 px-20">
+<div class="mx-20 my-20">
+    <div class="space-y-6">
         <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Your favourite tools</h1>
         <h6 class="text-center text-[#475569] text-xl">In risus nec molestie at in pulvinar tellus. At integer id condimentum gravida nisi nisl. Sem vitae <br>porttitor arcu congue sem erat et sit faucibus. Sollicitudin elit gravida tellus mattis porttitor.</h6>
     </div>
@@ -374,8 +374,8 @@
 </div>
 
 
-<div class="bg-[#F1F5F9] h-[934px]">
-    <div class="space-y-6 px-20 py-20">
+<div class="bg-[#F1F5F9] h-[934px] px-20">
+    <div class="space-y-6 py-20">
         <h1 class="font-extrabold text-transparent text-7xl bg-clip-text bg-gradient-to-r from-fuchsia-600 to-fuchsia-900 text-center">Frequently asked questions</h1>
         <h6 class="text-center text-[#475569] text-xl">Et pulvinar nec interdum integer id urna molestie porta nullam. A, donec ornare sed turpis pulvinar <br>purus maecenas quam a. Erat porttitor pharetra sed in mauris elementum sollicitudin.</h6>
     </div>
@@ -478,7 +478,7 @@
 </div>
 
 
-<div class=" flex flex-row px-20 py-12">
+<div class=" flex flex-row px-20 py-6">
   <img src="./assets/Zoomerr.svg" alt="">
   <p class="w-[550px] text-sm text-gray-600 pl-1">@ 2023 - All rights reserved</p>
   <div class="w-[550px] flex flex-row justify-end space-x-4">
